# cuViolaJones

./: CMakeLists.txt  Filter.cuh  Point.h  README.md  cpuViolaJones.hpp  cuIntegralImage.cuh  cuNNII.h  cuNNII_v2.cuh  cuViolaJones.cu  cuViolaJones2.cu  cuViolaJones_eric.cu  cuViolaJones_will.cu  cuda_error_check.h  gpuViolaJones.cuh  haar.cuh  haar.h  haar_will.cuh  load_images.hpp  macros.hpp  parameter_loader.h  paths.hpp  rectangles.cpp
cuViolaJones_alt/: CMakeLists.txt  HaarCascade.h  Main.cu
cuViolaJones_alt/data/: fp_labels.txt
data/: bush_labels.txt  labels.txt
opencv/sources/: CMakeLists.txt
txtdata/: ii.txt  iib.txt  iic.txt  iid.txt  iie.txt  iif.txt  iig.txt  iih.txt  iii.txt  iij.txt  iik.txt  iil.txt  iim.txt  iin.txt  iio.txt  iip.txt  iiq.txt  orig.txt
will/: CMakeLists.txt  ImageSet.h  README.md  cuNNII.h  cuViolaJones.cu  haar.cuh  haar.h  paths.hpp
